<resources>
    <string name="app_name">InternshipOfflineKt</string>
    <string name="create_account">Create An Account</string>
    <string name="email_user">Email or Username</string>
    <string name="enter_user">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Log In</string>
    <string name="login_message">Login Successfully</string>
    <string name="email">Email Id</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="contact">Contact No.</string>
    <string name="enter_contact">Enter Contact No.</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>

    <string name="signup">Signup</string>

    <string name="gender">Gender</string>
    <string name="city">City</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav_demo">NavDemoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>