<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_30sdp">

            <TextView
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/profile_username"
                style="@style/edit_15"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_user"
                android:hint="@string/enter_user"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/profile_name"
                style="@style/edit_15"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_user"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />

            <TextView
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/profile_email"
                style="@style/edit_15"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_user"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/contact" />

            <EditText
                android:id="@+id/profile_contact"
                style="@style/edit_15"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_user"
                android:hint="@string/enter_contact"
                android:inputType="phone"
                android:maxLength="10" />

            <TextView
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/profile_password"
                style="@style/edit_15"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_lock"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="12" />

            <TextView
                android:id="@+id/profile_confirm_password_title"
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/profile_confirm_password"
                style="@style/edit_15"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_lock"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword"
                android:maxLength="12" />

            <TextView
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    style="@style/radio_15"
                    android:id="@+id/profile_male"
                    android:layout_weight="1"
                    android:text="Male" />

                <RadioButton
                    style="@style/radio_15"
                    android:id="@+id/profile_female"
                    android:layout_weight="1"
                    android:text="Female"/>

            </RadioGroup>

            <TextView
                style="@style/text_bold_15"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/city" />

            <Spinner
                android:id="@+id/profile_city"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/profile_edit_button"
                style="@style/button_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/edit_profile" />

            <Button
                android:id="@+id/profile_button"
                style="@style/button_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/submit" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>