<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_create_account"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/create_account"
        style="@style/text_bold_15"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_create_account">

        <ImageView
            android:id="@+id/main_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/main_icon"
            android:layout_marginHorizontal="@dimen/_50sdp">

            <TextView
                style="@style/text_bold_15"
                android:id="@+id/main_email_title"
                android:layout_marginTop="50dp"
                android:text="@string/email_user" />

            <EditText
                android:inputType="textEmailAddress"
                style="@style/edit_15"
                android:id="@+id/main_email"
                android:layout_below="@id/main_email_title"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_user"
                android:hint="@string/enter_user" />

            <TextView
                style="@style/text_bold_15"
                android:id="@+id/main_password_title"
                android:layout_below="@id/main_email"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/password" />

            <EditText
                android:maxLength="12"
                android:inputType="textPassword"
                style="@style/edit_15"
                android:id="@+id/main_password"
                android:layout_below="@id/main_password_title"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/ic_lock"
                android:hint="@string/enter_password" />

            <Button
                android:id="@+id/main_login"
                style="@style/button_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_password"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/login" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>